<?xml version="1.0"?>
<package format="3">
  <name>cluster_vision</name>
  <version>0.1.0</version>
  <description>Plane segmentation and Clustering for object detection</description>
  <maintainer email="rohankhaire.work@gmail.com">Rohan Khaire</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
